Bugfix: Site Nav Callout Text Should Wrap
This PR fixes a bug where the text in the logged-out Site Nav callout
was not wrapping, causing the layout to look broken.

Fixes #1333

--- a/src/components/site-nav/_site-nav.scss
+++ b/src/components/site-nav/_site-nav.scss
@@ -87,6 +87,7 @@
 	max-width: 18em;
 	padding-right: var(--size-spacing-default);
 	padding-top: 3px;
+	text-wrap: auto;
 
 	@media screen and (min-width: tokens.$size-breakpoint-lg) {
 		display: block;
